--- a/config.toml
+++ b/config.toml
@@ -1,23 +1,20 @@
 # Page settings
 
-baseurl = "https://personal-resume-8c75f.firebaseapp.com"
+baseurl = "https://resume.cameronboy.com/"
 languageCode = "en-us"
-title = "Cameron Boy Resume"
+
 theme = "orbit"
 googleAnalytics = "UA-75773019-1"
 
 # Do not build files for websites. Need them? Set to false
-# disableRSS = true
-# disableSitemap = true
-# disable404 = true
 disableKinds=["404","RSS","sitemap"]
-
 
 [params]
 
 # Meta
     description = "Resume for Cameron Boy"
     author = "Cameron Boy"
+    title = "Cameron Boy Resume"
 
 # Theme styles
 
@@ -44,7 +41,7 @@ disableKinds=["404","RSS","sitemap"]
         class = "email"
         icon = "fa-envelope"
         url = "mailto: camerondavidboy@gmail.com"
-        title = "camerondavidboy@gmail.com"
+        title = "email"
 
         [[params.contact.list]]
         class = "phone"
@@ -55,7 +52,7 @@ disableKinds=["404","RSS","sitemap"]
         [[params.contact.list]]
         class = "website"
         icon = "fa-globe"
-        url = "cameronboy.com"
+        url = "https://cameronboy.com"
         title = "cameronboy.com"
 
         [[params.contact.list]]
@@ -74,7 +71,7 @@ disableKinds=["404","RSS","sitemap"]
         class = "twitter"
         icon = "fa-twitter"
         url = "//twitter.com/cboyrun"
-        title = "@caboyrun"
+        title = "@cboyrun"
 
     # Education section
     [params.education]
@@ -115,13 +112,21 @@ disableKinds=["404","RSS","sitemap"]
         title = "Interests"
 
         [[params.interests.list]]
-        interest = "Learning"
+        interest = "Coffee"
 
         [[params.interests.list]]
         interest = "Weightlifting"
 
         [[params.interests.list]]
         interest = "MotoGP"
+
+        [[params.interests.list]]
+        interest = "Machine Learning"
+
+        [[params.interests.list]]
+        interest = "Strong IPAs"
+
+
 
 # Main body sections
 
@@ -132,7 +137,7 @@ disableKinds=["404","RSS","sitemap"]
         enable = true
         icon = "fa-user"
         title = "Career Profile"
-        summary = "**Summarise your career here** lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu."
+        summary = "Data Analyst digging into the realm of data science through machine learning and python.  Over the last couple of years I have been working as an analyst for a number of different entities and developed a keen interest in machine learning & data science. "
 
     # Experiences section
     [params.experiences]
@@ -141,22 +146,16 @@ disableKinds=["404","RSS","sitemap"]
         title = "Experiences"
 
         [[params.jobs.list]]
-        position = "Lead Developer"
-        dates = "2015 - Present"
-        company = "Startup Hubs, San Francisco"
+        position = "Finance Data Analyst"
+        dates = "2017 - Present"
+        company = "Johns Manville, Denver"
         details = "**Describe your role here** lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.\n\n Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo."
 
         [[params.jobs.list]]
-        position = "Senior Software Engineer"
-        dates = "2014 - 2015"
-        company = "Google, London"
-        details = "**Describe your role here** lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem."
-
-        [[params.jobs.list]]
-        position = "UI Developer"
-        dates = "2012 - 2014"
-        company = "Amazon, London"
-        details = "**Describe your role here** lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem."
+        position = "Data Analyst"
+        dates = "2015 - 2017"
+        company = "BIWorldwide, Minnesota"
+        details = """With a team that provided multifaceted analytic support to multiple channels of a large, national-telecom client. We were on top of our descriptive analytics game and worked to apply a more systematic approach to analyses to extract deeper information from our data. I mined our hosted blog and ran sentiment analyses with R to shed light on open-eneded participant feedback. I also worked to utilize logistic regression to quantify the quality of referrals being made and provide groundwork for a hopeful future recommender system to offer the participant ways to improve the likelihood of their referral selling. And didsome cluster analyses on our program population to delve into promotion results and answer why some groups perform better than others. \n\nAlways explored other, external Developed models based on historical performance to predict incentive spend and facilitate fine tuning of sales incentive programs. Integrated R into some of our analyses for both internal & external stakeholders. Final reporting is rendered in HTML with the knitr & flexdashboard packages allowing for great deal of interactivity between the stakeholder and the data for those without Tableau licenses."""
 
     # Projects section
     [params.projects]
