--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ disableKinds=["404","RSS","sitemap"]
         class = "linkedin"
         icon = "fa-linkedin"
         url = "//linkedin.com/in/cameronboy"
-        title = "linkedin.com/in/cameronboy"
+        title = "linkedin.cameronboy.com"
 
         [[params.contact.list]]
         class = "github"
@@ -149,45 +149,45 @@ disableKinds=["404","RSS","sitemap"]
         position = "Finance Data Analyst"
         dates = "2017 - Present"
         company = "Johns Manville, Denver"
-        details = "New analyst team within the finance department.\n - Working with Tableau to improve & automate a lot of finance deliverables\n - Go-to SQL person on the team - Working to introduce Python & R to the mix as well."
+        details = "<strong>New analyst team within the finance department.</strong> The data analyst team within finance exists to shed the reporting load from the department and to provide advanced data support to Johns Manville finance. We are working with Tableau to improve & automate a lot of finance deliverables and promote a data-centric culture. Supporting that, I'm providing a technical background to our data projects to a team of analysts from the finance background. Go-to SQL person on the team - Working to introduce Python & R to the mix as well."
 
         [[params.jobs.list]]
         position = "Data Analyst"
         dates = "2015 - 2017"
         company = "BIWorldwide, Minnesota"
-        details = """With a team that provided multifaceted analytic support to multiple channels of a large, national-telecom client. We were on top of our descriptive analytics game and worked to apply a more systematic approach to analyses to extract deeper information from our data. I mined our hosted blog and ran sentiment analyses with R to shed light on open-eneded participant feedback. I also worked to utilize logistic regression to quantify the quality of referrals being made and provide groundwork for a hopeful future recommender system to offer the participant ways to improve the likelihood of their referral selling. And didsome cluster analyses on our program population to delve into promotion results and answer why some groups perform better than others. \n\nAlways explored other, external Developed models based on historical performance to predict incentive spend and facilitate fine tuning of sales incentive programs. Integrated R into some of our analyses for both internal & external stakeholders. Final reporting is rendered in HTML with the knitr & flexdashboard packages allowing for great deal of interactivity between the stakeholder and the data for those without Tableau licenses."""
+        details = """With a team that provided multifaceted analytic support to multiple channels of a large, national-telecom client. We were on top of our descriptive analytics game and worked to apply a more systematic approach to analyses to extract deeper information from our data. I mined our hosted blog and ran sentiment analyses with R to shed light on open-eneded participant feedback. I tried out logistic regression to determine the probability of referrals selling, and experimented with clustering on our program population to delve into promotion results and answer why some groups perform better than others. \n\nAlways explored other, external Developed models based on historical performance to predict incentive spend and facilitate fine tuning of sales incentive programs. Integrated R into some of our analyses for both internal & external stakeholders. Final reporting is rendered in HTML with the knitr & flexdashboard packages allowing for great deal of interactivity between the stakeholder and the data for those without Tableau licenses."""
 
     # Projects section
     [params.projects]
         enable = true
         icon = "fa-archive"
         title = "Projects"
-        intro = "**You can list your side projects or open source libraries in this section.** Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus"
+        intro = "<strong>Some of the side projects I am working on in my spare time</strong>"
 
         [[params.projects.list]]
-        title = "Hugrid"
-        url = "https://github.com/aerohub/hugrid"
-        tagline = "Grid theme for Hugo. It's a kind of boilerplate to perform anyone or anything quickly. Portfolio, collection, bookmarks, contacts and so on"
+        title = "Github Page"
+        url = "//github.com/cameronboy"
+        tagline = "Currently working on organizing and readme-ing my projects to list here!"
 
-        [[params.projects.list]]
-        title = "Simple FAQ Theme for Hugo"
-        url = "https://github.com/aerohub/hugo-faq-theme"
-        tagline = "Simple FAQ Theme for Hugo. You may use this theme for building very simple FAQs or note lists."
-
-        [[params.projects.list]]
-        title = "Hugo Identity"
-        url = "https://github.com/aerohub/hugo-identity-theme"
-        tagline = "Little profile/card-style template for Hugo."
-
-        [[params.projects.list]]
-        title = "Orbit"
-        url = "https://github.com/aerohub/hugo-orbit-theme"
-        tagline = "Hugo Resume/CV Theme for Developers."
-
-        [[params.projects.list]]
-        title = "Me"
-        url = "https://github.com/aerohub/hugo-me-theme"
-        tagline = "A simple responsive Hugo theme for personal site."
+        # [[params.projects.list]]
+        # title = "Simple FAQ Theme for Hugo"
+        # url = "https://github.com/aerohub/hugo-faq-theme"
+        # tagline = "Simple FAQ Theme for Hugo. You may use this theme for building very simple FAQs or note lists."
+        #
+        # [[params.projects.list]]
+        # title = "Hugo Identity"
+        # url = "https://github.com/aerohub/hugo-identity-theme"
+        # tagline = "Little profile/card-style template for Hugo."
+        #
+        # [[params.projects.list]]
+        # title = "Orbit"
+        # url = "https://github.com/aerohub/hugo-orbit-theme"
+        # tagline = "Hugo Resume/CV Theme for Developers."
+        #
+        # [[params.projects.list]]
+        # title = "Me"
+        # url = "https://github.com/aerohub/hugo-me-theme"
+        # tagline = "A simple responsive Hugo theme for personal site."
 
     # Skills section
     [params.skills]
