--- a/config.toml
+++ b/config.toml
@@ -137,7 +137,7 @@ disableKinds=["404","RSS","sitemap"]
         enable = true
         icon = "fa-user"
         title = "Career Profile"
-        summary = "Data Analyst digging into the realm of data science through machine learning, python, and R.  Over the last couple of years I have been working as an analyst for a number of different organizations and developed a keen interest in machine learning & data science."
+        summary = "Data Analyst digging into the realm of data science through machine learning, python, and R.  Over the last couple of years I have been working as an analyst for a number of different organizations and developed a keen interest in machine learning and data science."
 
     # Experiences section
     [params.experiences]
@@ -149,13 +149,13 @@ disableKinds=["404","RSS","sitemap"]
         position = "Finance Data Analyst"
         dates = "2017 - Present"
         company = "Johns Manville, Denver"
-        details = "<strong>New analyst team within the finance department.</strong> The data analyst team within finance exists to shed the reporting load from the department and to provide advanced data support to Johns Manville finance. We are working with Tableau to improve & automate a lot of finance deliverables and promote a data-centric culture. Supporting that, I'm providing a technical background to our data projects to a team of analysts from the finance background. Go-to SQL person on the team - Working to introduce Python & R to the mix as well."
+        details = "<strong>New analyst team within the finance department.</strong> The data analyst team within finance exists to shed the reporting load from the department and to provide advanced data support to Johns Manville finance. My role is to provide a technical background to our data projects to a team of analysts from the finance background. We are working with Tableau to improve and automate a lot of finance deliverables and promote a data-centric culture. Go-to SQL person on the team - Working to introduce Python and R to the mix as well."
 
         [[params.jobs.list]]
         position = "Data Analyst"
         dates = "2015 - 2017"
         company = "BIWorldwide, Minnesota"
-        details = """With a team that provided multifaceted analytic support to multiple channels of a large, national-telecom client. We were on top of our descriptive analytics game and worked to apply a more systematic approach to analyses to extract deeper information from our data. I mined our hosted blog and ran sentiment analyses with R to shed light on open-eneded participant feedback. I tried out logistic regression to determine the probability of referrals selling, and experimented with clustering on our program population to delve into promotion results and answer why some groups perform better than others. \n\nAlways explored other, external Developed models based on historical performance to predict incentive spend and facilitate fine tuning of sales incentive programs. Integrated R into some of our analyses for both internal & external stakeholders. Final reporting is rendered in HTML with the knitr & flexdashboard packages allowing for great deal of interactivity between the stakeholder and the data for those without Tableau licenses."""
+        details = """With a team that provided multifaceted analytic support to multiple channels of a large, national-telecom client. We were on top of our descriptive analytics game and worked to apply a more systematic approach to analyses to extract deeper information from our data. I mined our hosted blog and ran sentiment analyses with R to shed light on open-eneded participant feedback. I tried out logistic regression to determine the probability of referrals selling, and experimented with clustering on our program population to delve into promotion results and answer why some groups perform better than others. \n\nAlways explored other, external Developed models based on historical performance to predict incentive spend and facilitate fine tuning of sales incentive programs. Integrated R into some of our analyses for both internal and external stakeholders. Final reporting is rendered in HTML with the knitr and flexdashboard packages allowing for great deal of interactivity between the stakeholder and the data for those without Tableau licenses."""
 
     # Projects section
     [params.projects]
