--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ disableKinds=["404","RSS","sitemap"]
 # Meta
     description = "Resume for Cameron Boy"
     author = "Cameron Boy"
-    title = "Cameron Boy Resume"
+    title = "Cameron Boy Info"
 
 # Theme styles
 
@@ -30,7 +30,7 @@ disableKinds=["404","RSS","sitemap"]
     # Profile section
     [params.profile]
         name = "Cameron Boy"
-        tagline = "Unabashed Data Nerd"
+        tagline = "Data Nerd; Python, R enthusiast"
         avatar = "profile.png"
 
     # Contact section
@@ -88,6 +88,18 @@ disableKinds=["404","RSS","sitemap"]
         college = "University of Minnesota"
         dates = "2009 - 2013"
 
+        [[params.education.list]]
+        degree = "Udacity"
+
+        [[params.education.list]]
+        degree = "Coursera"
+
+        [[params.education.list]]
+        degree = "DataCamp"
+        
+        
+
+
 
     # Languages section
     [params.language]
@@ -137,25 +149,41 @@ disableKinds=["404","RSS","sitemap"]
         enable = true
         icon = "fa-user"
         title = "Career Profile"
-        summary = "Experienced Data Analyst using python, R, and other open-source technologies to solve problems with data."
+        summary = "<strong>An experienced Data Analyst always looking to learn new and creative ways operate.</strong> The last couple years have seen a transition to learning python, R and working through some moocs. <li>[Andrew Ng's machine learning course](https://www.coursera.org/learn/machine-learning)</li> <li>[Udacity's Deep Learning Nanodegree](https://www.udacity.com/course/deep-learning-nanodegree--nd101)</li><li>[Intro & Intermediate R & Python for Data Science](https://datacamp.com)</li>"
 
     # Experiences section
     [params.experiences]
         enable = true
         icon = "fa-briefcase"
-        title = "Experiences"
+        title = "Experience"
 
         [[params.jobs.list]]
         position = "Finance Data Analyst"
-        dates = "2017 - Present"
+        dates = "Aug 2017 - Present"
         company = "Johns Manville, Denver"
-        details = "<strong>New analyst team within the finance department.</strong> Our team operates in close contact with the CFO to be the central analytics hub and to provide advanced data & analytics support to Johns Manville finance.\n\n <strong>My Impact:</strong>\n I came on board to provide my technical background to our data projects with SQL support, advanced tableau, and python."
+        details = '<strong>I work to provide a technical background to our data projects with SQL support, advanced tableau, and python on our team within the finance department.</strong> Our team operates in close contact with the CFO to be the central analytics hub and to provide advanced data & analytics support to Johns Manville finance.<li>Introducing python to our team with ETL pipelines to feed our MSSQL database.</li><li>Built a model with keras (tensorflow backend) in python to estimate tax liabilities to bring potential errors to the attention of our tax department thus reducing the possibility of incurring consultant fees.</li><li>Managing analytics projects to completion supporting commercial sales analytics to internal tax reconciliation</li>'
 
         [[params.jobs.list]]
         position = "Data Analyst"
-        dates = "2015 - 2017"
+        dates = "Mar 2015 - Aug 2017"
         company = "BIWorldwide, Minnesota"
-        details = """With a team that provided multifaceted analytic support to multiple channels of a large, national-telecom client. We were on top of our descriptive analytics game and worked to apply a more systematic approach to analyses to extract deeper information from our data.\n\n<strong>My Impact:</strong>\nI mined our hosted blog and ran sentiment analyses with R to shed light on open-eneded participant feedback.\n I developed a logistic regression mdoel to determine the probability of referrals selling, and experimented with clustering on our program population to delve into promotion results and answer why some groups perform better than others.\n Integrated R into some of our analyses for both internal and external stakeholders. Final reporting is rendered in HTML with the knitr and flexdashboard packages allowing for great deal of interactivity between the stakeholder and the data for those without Tableau licenses."""
+        details = 'With a team that provided multifaceted analytic support for multiple channels of a large, national-telecom client. We were on top of our descriptive analytics game and worked to apply a more systematic approach to analysis to extract deeper information from our data.<li>I mined our hosted blog and ran sentiment analyses with R to shed light on open-eneded participant feedback.</li><li>Developed a logistic regression model to determine the probability of referrals selling, and experimented with clustering on our program population to delve into promotion results and answer why some groups perform better than others.</li><li>Integrated R into some of our analyses for both internal and external stakeholder with final reporting is rendered in HTML with the knitr and flexdashboard packages allowing for great deal of interactivity between the stakeholder and the data for those without Tableau licenses.</li>'
+
+
+        [[params.jobs.list]]
+        position = "Project Coordinator"
+        dates = "Sep 2014 - Mar 2015"
+        company = "BIWorldwide, Minnesota"
+        details = 'Our team ran and operated the incentive programs for numerous automobile clients through an in-house developed web app, back-end databases and procedures, reporting, and client support.<li>Learned SQL on the job moved all of our excel reporting to SQL saving our monday mornings.</li><li>Support Business Analysts with fielding of participant inquiries in a timely manner.</li><li>Responsible for development and execution of day-to-day sales reporting distributed to the client.</li><li>Complete documentation of database and Website procedures.</li>'
+
+
+
+        [[params.jobs.list]]
+        position = "Data Analyst"
+        dates = "Jun 2013 - Sep 2014"
+        company = "AmerisourceBergen, Minnesota"
+        details = '<li>Designed, developed, implemented, and tested new processes and dashboards that improved data analysis and tracking, reduced cost, and improved process effectiveness and accuracy.</li><li>Directly oversaw 10+ of these analysis processes that monitor our performance on compliance contracts valued at millions in quarterly revenue.</li><li>Consulted with end-users on their requirements to drive my report design, development and testing.</li><li>Communicated with our pharmaceutical buyers on actionable steps towards maximizing our inventory position whilst minimizing penalties associated with erratic purchasing activity.</li><li>Conducted mathematical analysis of inventory/service level data to ensure maximum reward payment from our contracted suppliers.</li>'
+
 
 
     # Projects section
@@ -175,15 +203,20 @@ disableKinds=["404","RSS","sitemap"]
         url = "https://github.com/cameronboy/DLND-P1/blob/master/Neural%20Network%20-%20Bike%20Demand%20Prediction.ipynb"
         tagline = "A vanilla neural network implemented in pure `numpy` to predict bike sharing demand."
         
-        # [[params.projects.list]]
-        # title = "Orbit"
-        # url = "https://github.com/aerohub/hugo-orbit-theme"
-        # tagline = "Hugo Resume/CV Theme for Developers."
-        #
-        # [[params.projects.list]]
-        # title = "Me"
-        # url = "https://github.com/aerohub/hugo-me-theme"
-        # tagline = "A simple responsive Hugo theme for personal site."
+        [[params.projects.list]]
+        title = 'NLP - Machine Translation - Udacity project'
+        url = "https://github.com/cameronboy/DLND-P4/blob/master/dlnd_language_translation.ipynb"
+        tagline = 'A sequence to sequence model translating english text to french.'
+        
+        [[params.projects.list]]
+        title = "Sudoku solver - Udacity project"
+        url = "https://github.com/cameronboy/aind-sudoku"
+        tagline = "An intelligent agent that solves sudoku puzzles."
+
+        [[params.projects.list]]
+        title = 'Isolation Agent - Udacity project'
+        url = 'https://github.com/cameronboy/aind-isolation'
+        tagline = 'An agent utilizing alpha-beta pruning to play isolation.'
 
     # Skills section
     [params.skills]
