--- a/config.toml
+++ b/config.toml
@@ -146,7 +146,7 @@ disableKinds=["404","RSS","sitemap"]
         enable = true
         icon = "fa-user"
         title = "Career Profile"
-        summary = "Experienced data professional with seasoned expertise in sql, python, aws, airflow."
+        summary = "Experienced data professional with experience with advanced SQL, python, aws, airflow, & git/github. Studying for [AWS Solutions Architect Associate](https://aws.amazon.com/certification/certified-solutions-architect-associate/) exam. Complex problem solving is my driving force where I aim to study and understand the problem to the core and build a solution up from there, allowing flexibility for future variances of today's problem."
 
     # Experiences section
     [params.experiences]
@@ -158,7 +158,7 @@ disableKinds=["404","RSS","sitemap"]
         position = "Decision Scientist"
         dates = "Dec 2018 - Aug 2020"
         company = "Ibotta, Inc"
-        details = "Our team is the analytical and technical support for our client success teams. Our work provided automated, multifaceted campaign results via a multitude of tools include SQL, Spark, Python, Hive, and Apache Airflow.\n* Authored pyspark/airflow pipeline to calculate program results, storing results in s3.\n*  Technical lead on our AB testing pipeline in object-oriented pyspark and airflow to measure statistical effectiveness of Ibotta platform.\n *  Automated the power analysis to determine optimal control sizes along with stratifying the groups to ensure similar behavior across the treatment & control.\n *  Ported repeated data analysis scripts into our internal python package for reproducibility and version management.\n *  Compiled campaign meta data via python in varying structures from S3, old Excel files local & Google Drive, and an internal API into one structured data set.\n *  Addressing continual support requests with adding functionality to our internal python module for rest of the team to use.\n *  Provide adhoc support as required from our client success teams."
+        details = "Our team is the analytical and technical support for our client success teams. Our work provided automated, multifaceted campaign results via a multitude of tools include SQL, Spark, Python, Hive, and Apache Airflow.\n* Authored pyspark/airflow ETL pipeline to calculate program results, storing results in s3 for nightly ingestion to our snowflake datastore feeding [looker](https://looker.com/) dasbhoards & explores.\n*  Technical lead on our AB testing pipeline in object-oriented pyspark and airflow to measure statistical effectiveness of Ibotta platform.\n * Query optimization liason for our team, consulting with our team on efficient SQL structure and operations to help reduce run time and compute resources.\n *  Automated the power analysis to determine optimal control sizes along with stratifying the groups to ensure similar behavior across the treatment & control.\n *  Ported repeated data analysis scripts into our internal python package for reproducibility and version control.\n *  Addressing continual support requests with adding functionality to our internal python module for rest of the team to use."
 
 
         [[params.jobs.list]]
@@ -171,7 +171,7 @@ disableKinds=["404","RSS","sitemap"]
         position = "Data Analyst"
         dates = "Mar 2015 - Aug 2017"
         company = "BIWorldwide"
-        details = "With a team that provided multifaceted analytic support for multiple channels of a large, national-telecom client. We were on top of our descriptive analytics game and worked to apply a more systematic approach to analysis to extract deeper information from our data.* I mined our hosted blog and ran sentiment analyses with R to shed light on open-eneded participant feedback.\n * Developed a logistic regression model to determine the probability of referrals selling, and experimented with clustering on our program population to delve into promotion results and answer why some groups perform better than others.\n * Integrated R into some of our analyses for both internal and external stakeholder with final reporting is rendered in HTML with the knitr and flexdashboard packages allowing for great deal of interactivity between the stakeholder and the data for those without Tableau licenses.\n "
+        details = "With a team that provided multifaceted analytic support for multiple channels of a large, national-telecom client. We were on top of our descriptive analytics game and worked to apply a more systematic approach to analysis to extract deeper information from our data.* I mined our hosted blog and ran sentiment analyses with R to shed light on open-eneded participant feedback.\n * Developed a logistic regression model to determine the probability of referrals selling, and experimented with clustering on our program population to delve into promotion results and answer why some groups perform better than others.\n * Integrated R into some of our analyses for both internal and external stakeholder with final reporting is rendered in HTML with the knitr and flexdashboard packages allowing for great deal of interactivity between the stakeholder and the data for those without Tableau licenses.\n"
 
 
         [[params.jobs.list]]
